<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin_verify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ic_edit_regemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/ic_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/ic_txt_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/lin_verify_email" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/lin_msg">

        <EditText
            android:id="@+id/ic_edit_vercode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ver_code"
            android:inputType="text"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/ic_btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>