<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="roadcondition.cynsore.cyient.com.cynsore.view.censor.SearchDirectionActivity">

    <EditText
        android:id="@+id/ic_search_src"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:clickable="true"
        android:elevation="2dp"
        android:hint="@string/source"
        android:onClick="onClick"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp"></EditText>

    <EditText
        android:id="@+id/ic_search_dest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:hint="@string/destination"
        app:layout_constraintTop_toBottomOf="@+id/ic_search_src"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"></EditText>


    <Button
        android:id="@+id/ic_btn_place_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cyient_color"
        android:elevation="5dp"
        android:padding="10dp"
        android:text="@string/submit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>